--- a/spring-1/pom.xml
+++ b/spring-1/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>ru.geekbrains.skvortsov.spring.ch_1</groupId>
     <artifactId>spring-1</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>lesson-1</module>
+    </modules>
 
 
 </project>
